force-app/main/default/objects/SurveyInvitation/fields/ExpireDateTime__c.field-meta.xml
<CustomField>
    <fullName>ExpireDateTime__c</fullName>
    <label>ExpireDateTime</label>
    <type>DateTime</type>
</CustomField>