force-app/main/default/objects/SurveyInvitation/fields/Is_End_Date_Visible__c.field-meta.xml
<CustomField>
    <fullName>Is_End_Date_Visible__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check to display a survey due date in task list available at home page and task page</inlineHelpText>
    <label>Is End Date Visible</label>
    <type>Checkbox</type>
</CustomField>