force-app/main/default/objects/SurveyInvitation/fields/Is_Midpoint__c.field-meta.xml
<CustomField>
    <fullName>Is_Midpoint__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Midpoint</label>
    <type>Checkbox</type>
</CustomField>