force-app/main/default/objects/SurveyInvitation/fields/IsTrialSurvey__c.field-meta.xml
<CustomField>
    <fullName>IsTrialSurvey__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsTrialSurvey</label>
    <type>Checkbox</type>
</CustomField>