force-app/main/default/objects/SurveyInvitation/fields/Participant_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Participant_Due_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Participant Due Date</label>
    <type>DateTime</type>
</CustomField>