force-app/main/default/objects/SurveyInvitation/fields/Participant_Study_Enrollment__c.field-meta.xml
<CustomField>
    <fullName>Participant_Study_Enrollment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>.</description>
    <label>Participant Study Enrollment</label>
    <referenceTo>Participant_Study_Enrollment__c</referenceTo>
    <relationshipLabel>Survey Invitations</relationshipLabel>
    <relationshipName>Survey_Invitations</relationshipName>
    <type>Lookup</type>
</CustomField>