force-app/main/default/objects/SurveyInvitation/fields/Reminder_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Reminder_Schedule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reminder Schedule</label>
    <referenceTo>Reminder_Schedule__c</referenceTo>
    <relationshipLabel>Survey Invitations</relationshipLabel>
    <relationshipName>Survey_Invitations</relationshipName>
    <type>Lookup</type>
</CustomField>