force-app/main/default/objects/SurveyInvitation/fields/ReminderDateTime__c.field-meta.xml
<CustomField>
    <fullName>ReminderDateTime__c</fullName>
    <label>ReminderDateTime</label>
    <type>DateTime</type>
</CustomField>