force-app/main/default/objects/SurveyInvitation/fields/Trial_Survey__c.field-meta.xml
<CustomField>
    <fullName>Trial_Survey__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Trial Survey</label>
    <referenceTo>Trial_Survey__c</referenceTo>
    <relationshipLabel>Survey Invitations</relationshipLabel>
    <relationshipName>Survey_Invitations</relationshipName>
    <type>Lookup</type>
</CustomField>